# OHscheduler

./: .gitignore  canister_ids.json  dfx.json  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
docs/: handoff.md  office-hours-scheduler-implementation-brief.md  ux-audit-report.md
docs/bulk-calendar-invites/: FridayAM_analyst-strategy-hour_1_file.ics
src/backend/: Cargo.toml  backend.did
src/backend/src/: auth.rs  coverage.rs  lib.rs  notifications.rs  recurrence.rs  storage.rs  types.rs
src/frontend/: .env.production  index.html
src/frontend/src/: App.tsx  global.css  theme.ts
src/frontend/src/components/: AdminPanel.tsx  AuthenticatedLayout.tsx  Calendar.tsx  CoverageQueue.tsx  Login.tsx  NotAuthorized.tsx  NotificationBell.tsx  PublicCalendar.tsx  TimezoneButton.tsx
src/frontend/src/components/ui/: Avatar.tsx  Button.tsx  ConfirmDialog.tsx  Modal.tsx  Select.tsx  Skeleton.tsx  Toggle.tsx  index.ts
src/frontend/src/hooks/: useAuth.tsx  useBackend.tsx  useTimezone.tsx
src/frontend/src/utils/: seriesColors.ts
