[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
lto = true
